[project]
name = "agentic-app"
version = "0.1.0"
description = ""
authors = [
    {name = "SumanAch10", email = "contact.sumanacharya@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "email-validator==2.1.1",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "requests==2.31.0",
    "psycopg2-binary==2.9.10"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
alembic = "1.13.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
